improvements to sourceshift, still working on sourceshift pinning behavior.  fixes for sourceshift css under safari.

--- a/spaces/SourceShift/SourceShift.css
+++ b/spaces/SourceShift/SourceShift.css
@@ -109,6 +109,7 @@ div.SSSourceShiftEditorTopTitle
 {
   float: left;
   margin-bottom: 4px;
+  width: 100%;
 }
 
 .SSSourceShiftEditorTabArea
@@ -249,6 +250,20 @@ div.SSSourceShiftButton .middle
   height: 24px;
 }
 
+div.SSSourceShiftButtonWebKit .middle
+{
+  font-size: 14px;
+  font-family: verdana;
+  line-height: 150%;
+  color: #F63B02;
+  margin-top: 2px;
+  border-top: 1px solid #F63B02;
+  border-bottom: 1px solid #F63B02;
+  -moz-box-sizing: border-box;
+  background-color: #220;
+  height: 22px;
+}
+
 div.SSSourceShiftButton:active .middle
 {
   margin-top: 1px;
@@ -256,10 +271,24 @@ div.SSSourceShiftButton:active .middle
   border-width: 2px;
 }
 
+div.SSSourceShiftButtonWebKit:active .middle
+{
+  margin-top: 1px;
+  height: 22px;
+  border-width: 2px;
+}
+
 div.SSSourceShiftButton .middleActive
 {
   margin-top: 1px;
   height: 26px;
+  border-width: 2px;
+}
+
+div.SSSourceShiftButtonWebKit .middleActive
+{
+  margin-top: 1px;
+  height: 22px;
   border-width: 2px;
 }
 
@@ -371,7 +400,7 @@ div.SSSourceShiftButton .SSRightActive
 
 .SSSourceShiftSource
 {
-  overflow: visible;
+  float: left;
 }
 
 .SSSourceShiftResizeControl
@@ -424,4 +453,21 @@ div.SSSourceShiftButton .SSRightActive
 .SSFrameBorder
 {
   border: 2px solid red;
+}
+
+#SSAutoResize
+{
+  float: left;
+  margin-left: 10px;
+  margin-top: 2px;
+}
+
+#SSAutoResizeLabel
+{
+  float: left;
+  font-family: verdana;
+  font-size: 11px;
+  color: #f63b01;
+  margin-top: 2px;
+  margin-left: 4px;
 }
